--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" 
-    content="Blog and contact card for full stack development and programming at equalcoding.dev"/>
+    <meta name="description"
+        content="Blog and contact card for full stack development and programming at equalcoding.dev" />
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
     <script src="../js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 
@@ -48,7 +50,8 @@
     <!-- CONTENT -->
     <div class=container-fluid>
         <!-- DEVTO -->
-        <img src="../img/icons/devto.svg" class="clickable no-svg-filter content-logo" onClick="devto()" alt="devto logo">
+        <img src="../img/icons/devto.svg" class="clickable no-svg-filter content-logo" onClick="devto()"
+            alt="devto logo">
         <div class="container pb-5">
             <div id="blog" class="row">
             </div>
@@ -64,7 +67,8 @@
         <!-- GITHUB END -->
     </div>
     <div class="footer">
-        <a href="https://equalcoding.dev/" class="clickable" style="text-decoration: none;">Designed by equalcoding</a>
+        <a href="https://equalcoding.dev/" class="clickable" style="text-decoration: none;">Developed by equalcoding</a>
+    </div>
     </div>
     <!-- CONTENT END -->
 </body>
