Hiding title for projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- DEVTO END -->
         <!-- GITHUB -->
         <img src="../img/icons/github.png" class="clickable content-logo" onClick="github()" alt="github logo">
-        <div class="content-title text-center pb-3" href="projects">Projects</div>
+        <div class="content-title text-center pb-3 hide" href="projects">Projects</div>
         <div class="container">
             <div id="github" class="row">
             </div>
